--- a/src/style/helpers/fonts.scss
+++ b/src/style/helpers/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'OpenSans';
-    src: url('../fonts/OpenSans-Regular.woff2') format('woff2');
+    src: url('./fonts/OpenSans-Regular.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: 'OpenSans';
-    src: url('../fonts/OpenSans-SemiBold.woff2') format('woff2');
+    src: url('./fonts/OpenSans-SemiBold.woff2') format('woff2');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
