--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,3 @@
-@import "./helpers/layout.scss";
 @import "./helpers/reset.scss";
-
-@import "./components/header.scss";
+@import "./helpers/fonts.scss";
+@import "./helpers/layout.scss";
